@@ -154,6 +154,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
 <!--                    <systemPropertyVariables>-->
 <!--                        <debugForkedProcess>-javaagent:/opt/buildAgent/tools/jacoco.0.8.11/jacocoagent.jar=append=true,destfile=/opt/buildAgent/temp/buildTmp/JACOCO7948386344573348721coverage/jacoco.exec</debugForkedProcess>-->
 <!--                    </systemPropertyVariables>-->
